<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2016 The Android Open Source Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<!-- Layout for the adder -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".AddActivity">

    <!-- Product Image category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_product_image" />

        <!-- Input field -->
        <LinearLayout
            style="@style/InputFieldsLayoutStyle">

        <!-- Product Image -->
        <ImageView
            android:id="@+id/add_image_view_holder"
            android:layout_width="@dimen/product_image_with_adder"
            android:layout_height="@dimen/product_image_height_adder"
            android:layout_marginTop="@dimen/activity_margin"
            android:layout_marginLeft="@dimen/detail_image_mL"/>

        <!-- Product Image button -->
        <Button
            android:id="@+id/add_select_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:layout_marginTop="@dimen/activity_margin"
            android:layout_marginLeft="@dimen/detail_image_mL"
            android:paddingLeft="@dimen/activity_margin"
            android:paddingRight="@dimen/activity_margin"
            android:textColor="@android:color/white"
            android:text="@string/add_image_adder" />
            </LinearLayout>
    </LinearLayout>

    <!-- Name category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_name"
            style="@style/CategoryStyle" />

        <!-- Input field -->
        <LinearLayout
            style="@style/InputFieldsLayoutStyle">

            <!-- Name field -->
            <EditText
                android:id="@+id/add_item_name"
                android:hint="@string/category_name"
                android:inputType="textCapWords"
                style="@style/AdderFieldStyle" />
        </LinearLayout>
    </LinearLayout>


    <!-- Price category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_price"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <RelativeLayout
            style="@style/InputFieldsLayoutStyle"
            android:orientation="horizontal">

            <!-- Price field -->
            <EditText
                android:id="@+id/add_item_price"
                android:hint="@string/category_price"
                android:inputType="numberDecimal"
                style="@style/AdderFieldStyle" />

            <!-- Units for price (€) -->
            <TextView
                android:id="@+id/label_item_units"
                android:text="@string/unit_item_price"
                style="@style/AdderUnitsStyle"/>
        </RelativeLayout>
    </LinearLayout>

    <!-- Quantity category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_quantity"
            style="@style/CategoryStyle" />

        <!-- Input field -->
        <LinearLayout
            style="@style/InputFieldsLayoutStyle">

            <!-- Quantity field -->
            <EditText
                android:id="@+id/add_item_quantity"
                android:hint="@string/category_quantity"
                android:inputType="number"
                style="@style/AdderFieldStyle" />
        </LinearLayout>
    </LinearLayout>


    <!-- Supplier category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_supplier"
            style="@style/CategoryStyle" />

        <!-- Input field -->
        <LinearLayout
            style="@style/InputFieldsLayoutStyle"
            android:orientation="vertical">

            <!-- Supplier field -->
            <EditText
                android:id="@+id/add_item_supplier"
                android:hint="@string/category_supplier"
                android:inputType="textCapWords"
                style="@style/AdderFieldStyle" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
