<?xml version="1.0" encoding="utf-8"?><!-- Layout for a single list item in the list of pets -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="@dimen/activity_margin">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/name_catalog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="#2B3D4D" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/TextViewsCatalogStyle"
                android:text="@string/list_price" />

            <TextView
                android:id="@+id/price_catalog"
                style="@style/TextViewsCatalogStyle" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/TextViewsCatalogStyle"
                android:text="@string/list_quantity" />

            <TextView
                android:id="@+id/quantity_catalog"
                style="@style/TextViewsCatalogStyle" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/sale_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:focusable="false"
        android:text="@string/action_buy" />

</RelativeLayout>